--- a/src/html/mall.html
+++ b/src/html/mall.html
@@ -631,7 +631,8 @@
 
 
 
-
+<script type="text/javascript" src="../js/vendor/parsley/parsley.min.js"></script>
+<script type="text/javascript" src="../js/vendor/parsley/zh_cn.js"></script>
 <script src="../js/mall.js"></script>
 
 
