--- a/src/html/mallmanagement_commodity_admin.html
+++ b/src/html/mallmanagement_commodity_admin.html
@@ -471,7 +471,7 @@
                       </tr>
                       <tr>
                         <td>2</td>
-                        <td>商品名称</td>
+                        <td>商品名称2</td>
                         <td><input type="text" class="form-control" value="3"></td>
                         <td>
                           <div class="media">
