--- a/src/html/schoolmanagement_list.html
+++ b/src/html/schoolmanagement_list.html
@@ -800,7 +800,7 @@
                 <input type="text" placeholder="请输入校长手机" class="form-control">
               </div>
             </div>
-            <div class="province-item-1 form-group" province='310000' city='310100'>
+            <div class="province-item-1 form-group" province='101020200' city='101020200' area='101020800'>
             </div>
             <div class="form-group">
               <label class="col-lg-1 control-label" style="min-width: 100px;"></label>
