--- a/src/html/07_personal_data.html
+++ b/src/html/07_personal_data.html
@@ -143,14 +143,8 @@
               </div>
               <div class="change-detail-item">
                 <div class="change-detail-name">所在地区：</div>
-                <div class="detail-select2">
-                  <select name="" id="" class="prov" provinceId='110000'>
-                    <option value=""></option>
-                  </select>
-                  /&nbsp;&nbsp;
-                  <select name="" id="" class="city" cityId='110001'>
-                    <option value=""></option>
-                  </select>
+                <div class="detail-select2" province='101010200' city='101010200' area='101010200'>
+                  
                 </div>
               </div>
               <div class="change-detail-item">
@@ -212,12 +206,14 @@
 
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-  <script src="../js/cityselect.js"></script>
+  <script src="../js/provincesData.js"></script>
+  <script src="../js/jquery.provincesCity.js"></script>
   <script src="../js/parsley.min.js"></script>
   <script src="../js/main_linye.js"></script>
   <script type="text/javascript">
     $(function () {
       $('#form').parsley();//调用parsley表单验证插件
+      $('.detail-select2').ProvinceCity();
     });
   </script>
 </body>
