--- a/src/html/49_clearance_显身手_03.html
+++ b/src/html/49_clearance_显身手_03.html
@@ -238,19 +238,22 @@
       </div>
     </div>
   </div>
+  <!-- build:foot -->
   <!-- 底部 -->
-  <div class="xc-coustom-footer">
-    <div class="xc-container">
-      <div class="coustom-footer-btn">提交试卷</div>
-      <div class="coustom-footer-return">
-        <a class="return" href="javascript:;">返回</a>
-      </div>
-      <div class="coustom-footer-time">
-        <img class="timeImg" src="../img/intelText-footer-time.png" alt="时间">倒计时
-        <span class="time">01:28</span>
+  <div class="footer">
+      <div class="footer-ct">
+        <div class="tel-wp">
+          <img src="../img/logo.png" alt="" class="logo">
+          <img src="../img/tel.png" alt="" class="foot-tel">021-00000000
+        </div>
+        <p class="ads-wp">
+          <span class="name">上海XXXXXXXXXXXXXXXXXXX有限公司</span>
+          <span class="ads">地址：上海XXXXXXXXXXXXXXXXXXX</span>
+        </p>
+        <p class="record">智厢逢智能英语版权所有 © 备案号备案号备案号备案号</p>
       </div>
     </div>
-  </div>
+    <!-- endbuild -->
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
   <script src="../js/main_xc.js"></script>
 </body>
