--- a/src/html/studentmanagement_allocated_admin.html
+++ b/src/html/studentmanagement_allocated_admin.html
@@ -23,6 +23,7 @@
 
 
 
+  <link rel="stylesheet" href="../css/main_xc.css">
 
 
 
@@ -82,6 +83,7 @@
       </nav>
     </header>
     <!-- endbuild -->
+
 
 
 
@@ -407,6 +409,7 @@
 
 
 
+
     <!-- 主要内容 -->
     <section>
       <div class="content-wrapper">
@@ -630,6 +633,7 @@
 
 
 
+
               </div>
             </div>
           </div>
@@ -643,6 +647,7 @@
       <span>&copy; 2018 - 智厢逢</span>
     </footer>
     <!-- endbuild -->
+
 
 
 
@@ -681,6 +686,7 @@
   <script src="../js/vendor/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
   <script src="../js/app.js"></script>
   <!-- endbuild -->
+
 
 
 
