--- a/src/html/49_clearance_字母大通关_01.html
+++ b/src/html/49_clearance_字母大通关_01.html
@@ -206,7 +206,8 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <img class="img" src="../img/playsound.png" alt="听">点击播放语音
+                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
                 <div class="coustom-label can radio">
@@ -217,7 +218,8 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <img class="img" src="../img/playsound_active.png" alt="听">点击暂停语音
+                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
                 <div class="coustom-label can radio">
@@ -228,7 +230,8 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <img class="img" src="../img/playsound.png" alt="听">点击播放语音
+                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
                 <div class="coustom-label can radio">
