--- a/src/html/49_clearance_显身手_01.html
+++ b/src/html/49_clearance_显身手_01.html
@@ -181,7 +181,19 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <img class="img" src="../img/playsound.png" alt="听">点击播放语音
+                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                  <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
+              </div>
+              <div class="coustom-pent-body">
+                <div class="coustom-label can radio">
+                  <input type="text" class="write-input" placeholder="请拼写单词">
+                </div>
+              </div>
+            </div>
+            <div class="xc-coustom-pent">
+              <div class="coustom-pent-head">
+                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                  <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
                 <div class="coustom-label can radio">
@@ -192,18 +204,8 @@
             <div class="xc-coustom-pent">
               <div class="coustom-pent-head">
                 <span class="num">1.</span>
-                <img class="img" src="../img/playsound_active.png" alt="听">点击暂停语音
-              </div>
-              <div class="coustom-pent-body">
-                <div class="coustom-label can radio">
-                  <input type="text" class="write-input" placeholder="请拼写单词">
-                </div>
-              </div>
-            </div>
-            <div class="xc-coustom-pent">
-              <div class="coustom-pent-head">
-                <span class="num">1.</span>
-                <img class="img" src="../img/playsound.png" alt="听">点击播放语音
+                <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                  <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
               </div>
               <div class="coustom-pent-body">
                 <div class="coustom-label can radio">
