--- a/src/html/49_clearance_显身手_02.html
+++ b/src/html/49_clearance_显身手_02.html
@@ -213,7 +213,8 @@
                 <div class="coustom-pent-head">
                   <img class="xc-review-img" src="../img/right_icon.png" alt="正确">
                   <span class="num">1.</span>
-                  <img class="img" src="../img/playsound.png" alt="听">点击播放语音
+                  <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                    <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
                 </div>
                 <div class="coustom-pent-body">
                   <div class="coustom-label can radio">
@@ -225,7 +226,8 @@
                 <div class="coustom-pent-head">
                   <img class="xc-review-img" src="../img/right_icon.png" alt="正确">
                   <span class="num">1.</span>
-                  <img class="img" src="../img/playsound.png" alt="听">点击播放语音
+                  <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                    <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
                 </div>
                 <div class="coustom-pent-body">
                   <div class="coustom-label can radio">
@@ -237,7 +239,8 @@
                 <div class="coustom-pent-head">
                   <img class="xc-review-img" src="../img/right_icon.png" alt="正确">
                   <span class="num">1.</span>
-                  <img class="img" src="../img/playsound.png" alt="听">点击播放语音
+                  <audio class="audioType1"><source src="../music/3.mp3" type="audio/mp3"></audio>
+                    <img class="img tooglePlay play" src="../img/playsound.png" alt="听"><span>点击播放语音</span>
                 </div>
                 <div class="coustom-pent-body">
                   <div class="coustom-label can radio">
